<resources>
    <string name="app_name">노잉</string>
    //카카오 로그인 키값
    <string name="kakao_app_key">d8e0e3e9398b5db90db367e587268a49</string>

    //facebook계정 로그인 키값
    <string name="facebook_app_id">1582784508732482</string>
    <string name="fb_login_protocol_scheme">fb1582784508732482</string>


    <!--onboarding1-->
    <string name="onboarding1_1">나에게 맞는 정보만\n빠르게 쏙쏙!</string>
    <string name="onboarding1_2">나를 위한 정부 보조금 정책을\n간편하게 받아보세요.</string>
    <!--onboarding2-->
    <string name="onboarding2_1">정책 발견부터\n알림 신청,\n관리까지 한번에!</string>
    <string name="onboarding2_2">개인 비서같은 꼼꼼함으로 정책 신청부터\n관리까지, 놓치지 않고 도와드릴게요.</string>

    <!--sign_up-->
    <string name="title1">환영합니다!</string>
    <string name="title2">한페이지로\n끝내는 회원가입</string>
    <string name="edt_name_hint">이름 입력</string>
    <string name="edt_email_hint">이메일 주소 입력</string>
    <string name="edt_pwd_hint">영문자와 숫자 포함 8자 이상 입력</string>
    <string name="tx_email_error">이메일 형식이 올바르지 않습니다.</string>
    <string name="tx_pwd_error">영문자와 숫자 포함 8자 이상 입력해주세요.</string>
    <string name="tx_pwd_check_error">두 비밀번호가 같지 않습니다.</string>

    <!--sns_sign_up-->
    <string name="sns_sign_up_title1">환영합니다!</string>
    <string name="sns_sign_up_title2">이용자님,\n뭐라고 불러드릴까요?</string>

    <!--sign_in-->
    <string name="sign_in_title">로그인</string>

    <!--search_email-->
    <string name="search_email_title">이메일 찾기</string>

    <!--search_pwd-->
    <string name="search_pwd_title">비밀번호 재설정</string>
    
    <!--loading-->
    <string name="loading_title">복지 수혜 예상\n금액을 계산중이에요!</string>
    <string name="loadin_wait">잠시만 기다려주세요</string>

    <!--more_information1-->
    <string name="more_information1_title1">딱 맞는 복지정보, 노잉이 찾아드릴게요!</string>
    <string name="more_information1_title2">님만의 혜택을 위해선\n추가 입력이 필요해요</string>
    <string name="more_information1_address">거주지</string>
    <string name="more_information1_title_special">특별사항</string>
    <string name="more_information1_content_check">가장, 다문화가정, 한부모가정,\n군인의 자녀, 장애인, 다자녀,\n북한이탈주민&#183;자녀, 국가유공자&#183;자녀</string>
    <string name="more_information1_choice_do">시/도 선택</string>
    <string name="more_information1_choice_si">시/군/구 선택</string>
    <string name="more_information1_select_special">특별사항 선택</string>
    <string name="more_information1_not_choice_do_mention">[시/도]를 먼저 선택해주세요.</string>

    <!--more_information2-->
    <string name="more_information2_title1">월 소득</string>
    <string name="more_information2_title2">취업상태</string>

    <!--more information3-->
    <string name="more_information3_title1">학적사항</string>
    <string name="more_information3_title2">학교</string>



    <!--more_information4-->
    <string name="more_information4_title_major">전공 계열</string>
    <string name="more_information4_title_major2">학과</string>

    <!--more_information5-->
    <string name="more_information5_title_term">현재 학기</string>
    <string name="more_information5_title_term_plus">추가 학기 / 졸업 유예</string>
    <string name="more_information5_title_last_semester_score">지난 학기 학점</string>

    <!--select_category-->
    <string name="select_category">추천 받을 복지\n카테고리 선택하기</string>
    <string name="select_category_foundation_btn1">구직 활동 지원 &#183; 인턴</string>

    <!--main-->
    <string name="bottom_navi_menu1">홈</string>
    <string name="bottom_navi_menu2">알림내역</string>
    <string name="bottom_navi_menu3">북마크</string>
    <string name="bottom_navi_menu4">마이페이지</string>


    <!--open_source-->
    <string name="Freepik_contents">&lt;a href="https://www.freepik.com/vectors/people">People vector created by freepik - www.freepik.com&lt;/a&gt;
\n
\n&lt;a href="https://www.freepik.com/vectors/christmas">Christmas vector created by freepik - www.freepik.com&lt;/a&gt;
\n
\n&lt;a href="https://www.freepik.com/vectors/sale">Sale vector created by vectorjuice - www.freepik.com&lt;/a&gt;
\n
\n&lt;a href="http://www.freepik.com">Designed by gstudioimagen / Freepik&lt;/a&gt;
\n
\n&lt;a href="https://www.freepik.com/vectors/people">People vector created by stories - www.freepik.com&lt;/a&gt;
\n
\n&lt;a href="https://www.freepik.com/vectors/data">Data vector created by stories - www.freepik.com&lt;/a&gt;
\n
\n&lt;a href="https://www.freepik.com/vectors/mobile">Mobile vector created by stories - www.freepik.com&lt;/a&gt;\n\n\n\n
</string>

</resources>