<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_home_bottomNavi_home"
        android:title="@string/bottom_navi_menu1"
        android:icon="@drawable/ic_bottom_nav_home_selector"/>
    <item
        android:id="@+id/main_home_bottomNavi_alert"
        android:title="@string/bottom_navi_menu2"
        android:icon="@drawable/ic_bottom_nav_bell_selector"/>
    <item
        android:id="@+id/main_home_bottomNavi_bookmark"
        android:title="@string/bottom_navi_menu3"
        android:icon="@drawable/ic_bottom_nav_bookmark_selector"/>
    <item
        android:id="@+id/main_home_bottomNavi_my_page"
        android:title="@string/bottom_navi_menu4"
        android:icon="@drawable/ic_bottom_nav_mypage_selector"/>
</menu>