<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="31dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_arrow_back_signuppage" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title"
        android:fontFamily="@font/godom"
        android:textSize="24sp"
        android:textColor="#656565"
        app:layout_constraintTop_toTopOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tx_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="이메일"
        android:textColor="#64625e"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/sign_in_edit_bg"
        android:drawableStart="@drawable/ic_sign_up_edt_email_left"
        android:drawablePadding="8dp"
        android:hint="이메일 주소 입력"
        android:textColorHint="#c2c2c2"
        android:textCursorDrawable="@drawable/sign_up_edt_cursor"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tx_email" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tx_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_email_error"
        android:textSize="11sp"
        android:textColor="#ff6c00"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        android:layout_marginTop="5dp"
        android:visibility="invisible"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tx_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="비밀번호"
        android:textColor="#64625e"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/sign_in_edit_bg"
        android:drawableStart="@drawable/ic_sign_up_edt_pwd_left"
        android:drawablePadding="8dp"
        android:hint="영문자와 숫자 포합 8자 이상 입력"
        android:textColorHint="#c2c2c2"
        android:textCursorDrawable="@drawable/sign_up_edt_cursor"
        android:textSize="16sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tx_pwd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tx_pwd_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_pwd_error"
        android:textSize="11sp"
        android:textColor="#ff6c00"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@+id/edt_pwd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        android:layout_marginTop="5dp"
        android:visibility="invisible"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/sign_up_final_btn_bg"
        android:enabled="false"
        android:text="로그인하기"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/edt_pwd" />

    <TextView
        android:id="@+id/btn_search_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="9dp"
        android:text="이메일 찾기"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#939393"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>


    <View
        android:id="@+id/line"
        android:layout_width="2dp"
        android:layout_height="11dp"
        android:background="#e0e0e0"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/btn_search_email"
        app:layout_constraintBottom_toBottomOf="@+id/btn_search_email" />


    <TextView
        android:id="@+id/btn_search_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="9dp"
        android:text="비밀번호 재설정"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#939393"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>


    <ImageView
        android:id="@+id/img_email_error"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_alert_signuppage"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintTop_toTopOf="@+id/edt_email"
        app:layout_constraintBottom_toBottomOf="@+id/edt_email"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/img_email_cancel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintTop_toTopOf="@+id/edt_email"
        app:layout_constraintBottom_toBottomOf="@+id/edt_email"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:visibility="invisible"/>


    <ImageView
        android:id="@+id/img_pwd_error"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_alert_signuppage"
        app:layout_constraintEnd_toEndOf="@+id/edt_pwd"
        app:layout_constraintTop_toTopOf="@+id/edt_pwd"
        app:layout_constraintBottom_toBottomOf="@+id/edt_pwd"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/img_pwd_cancel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="@+id/edt_pwd"
        app:layout_constraintTop_toTopOf="@+id/edt_pwd"
        app:layout_constraintBottom_toBottomOf="@+id/edt_pwd"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:visibility="invisible"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />


</androidx.constraintlayout.widget.ConstraintLayout>