<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="31dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_arrow_back_signuppage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#f98551"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@+id/img_progress"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/progress_bar_5"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tx_category1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="카테고리 중"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="#939393"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/img_star_category"
        app:layout_constraintTop_toBottomOf="@+id/img_progress"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_star_category"
        android:layout_width="11dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/star"
        app:layout_constraintEnd_toStartOf="@id/tx_category2"
        app:layout_constraintStart_toEndOf="@+id/tx_category1"
        app:layout_constraintTop_toTopOf="@id/tx_category1"
        app:layout_constraintBottom_toBottomOf="@id/tx_category1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tx_category2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="은 필수 기재 사항이에요."
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="#939393"
        android:layout_marginTop="27dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@+id/img_star_category"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/img_progress"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tx_title_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_information5_title_term"
        android:fontFamily="@font/roboto_bold"
        android:textSize="15sp"
        android:textColor="#666666"
        android:layout_marginTop="44dp"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tx_category1"/>


    <!--거주지 시/도 선택하는 부분 constraintLayout으로 버튼처럼 만듬-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_select_grade_semester"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/tx_title_term"
        app:layout_constraintStart_toStartOf="@id/guidelineStart">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tx_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="19sp"
            android:textColor="#c2c2c2"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="학년"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="#414141"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tx_grade"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tx_semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="19sp"
            android:textColor="#c2c2c2"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/title_grade"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="학년"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="#414141"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tx_semester"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tx_grade"
            app:layout_constraintBottom_toBottomOf="@id/tx_grade"/>

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="#979797"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tx_grade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_check"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/group_checkbox"
        android:layout_marginTop="14dp"
        android:layout_marginStart="17dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_grade_semester"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_information5_title_term_plus"
        android:textColor="#737373"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/btn_check"
        app:layout_constraintTop_toTopOf="@+id/btn_check"
        app:layout_constraintBottom_toBottomOf="@+id/btn_check"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tx_title_last_semester_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_information5_title_last_semester_score"
        android:fontFamily="@font/roboto_bold"
        android:textSize="15sp"
        android:textColor="#666666"
        android:layout_marginTop="35dp"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/btn_check"/>

    <!-- (~2.9) (3.0~3.4) (3.5~3.9) 버튼 리니어-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_btn_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/tx_title_last_semester_score">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_last_semester1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="~2.9"
            android:textSize="14sp"
            android:textColor="#6c6c6c"
            android:fontFamily="@font/roboto_medium"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/more_information_4_major_btn_unchecked_bg"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_last_semester2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="3.0~3.4"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#6c6c6c"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/more_information_4_major_btn_unchecked_bg"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_last_semester3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="3.5~3.9"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#6c6c6c"
            android:background="@drawable/more_information_4_major_btn_unchecked_bg"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <!--기타, 공백, 공백 버튼 리니어-->


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_btn_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/linear_btn_1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_last_semester4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/more_information_4_major_btn_unchecked_bg"
            android:fontFamily="@font/roboto_medium"
            android:text="해당 없음"
            android:textColor="#6c6c6c"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_major11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@color/trans" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_major12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/trans" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="완료"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/gothic_bold"
        android:background="@drawable/sign_up_final_btn_bg"
        android:layout_marginBottom="41dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />



</androidx.constraintlayout.widget.ConstraintLayout>